--- a/assessment 1 Part1-2.Rmd
+++ b/assessment 1 Part1-2.Rmd
@@ -37,13 +37,13 @@ library(dplyr)
 library(reshape)
 library(tidyr)
 ```
-#**6.
+###6.
 ```{r}
 fastfood <- readr::read_csv("https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2018/2018-09-04/fastfood_calories.csv")
 data%>%head(10)
 ```
 
-#**7. Display the first 10 rows of the dataset.and the first 5 variables**
+###7. Display the first 10 rows of the dataset.and the first 5 variables**
 ```{r}
 data%>%head (10)
 data<-5
@@ -53,13 +53,13 @@ knitr::kable(head(fastfood[,1:5]),"pipe")
 
 ```
 
-#**8.Display the observations that has more than 1000 calories**
+###8.Display the observations that has more than 1000 calories**
 ```{r}
 fastfood%>%
   filter(calories>1000)
 ```
 
-#**9.Observations with more than 40 in total_fat and more than 80 in total_carb in a new variable (dataset) called `dont_eat_this`
+###9.Observations with more than 40 in total_fat and more than 80 in total_carb in a new variable (dataset) called `dont_eat_this`
 ```{r}
 dont_eat_this<-fastfood%>%
 select(restaurant,item,total_carb)%>%
@@ -74,7 +74,7 @@ filter(total_carb>80)%>%
 
 ```
 
-#**10.Display observations from restaurant Mcdonalds
+###10.Display observations from restaurant Mcdonalds
 ```{r}
 fastfood%>%
   filter(restaurant--"Mcdonalds")
